src/test/deca/syntax/invalid/mauvais_ifthenelse_4.deca
// Description:
//    mauvaise utilisation du if: autre chose qu'une inst dans le premier crochet du else if
//
// Resultats:
// ligne 9: "extraneous input 'x' expecting {'<', '>', '=', '+', '-', '*', '%', '/', '.', ';', '==', '!=', '>=', '<=', '&&', '||', 'instanceof'}"


{if (true) {
	println("if");
 }
 else if (false) {
 	float x;
 }
 else {
 	println("else");
 };
}
  